# email_or_phone_jwt

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
us/: manage.py
us/us/: asgi.py  settings.py  urls.py  wsgi.py
us/usersapp/: admin.py  backends.py  managers.py  models.py  serializers.py  tests.py  urls.py
us/usersapp/management/commands/: admininit.py
us/usersapp/migrations/: 0001_initial.py
