[tool.poetry]
name = "us"
version = "0.1.0"
description = ""
authors = ["Roman Ivanov <sitdoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
environs = "^10.3.0"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
